--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
+streamlit==0.87.0
 mysql-connector-python==8.0.26
-pyarrow==3.0.0
-numpy==1.20.1
-pandas
+pyarrow==5.0.0
+numpy==1.21.2
+pandas==1.3.2
 datetime
